[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/warm_area/WarmArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 600 )

[node name="WarmArea" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_WarmArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WarmArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
